--- a/app/views/searches/_form.html.erb
+++ b/app/views/searches/_form.html.erb
@@ -2,12 +2,13 @@
 
 <span class="field" style="margin-right: 50px" >
     <%= s.label :client, collection: @client %>
-    <%= s.collection_select :client, @client, :client_name, :client_name, {}, {multiple: true} %>
+    <%= s.collection_select :client, @client, :id, :client_name, {}, {multiple: true} %>
+    <%= link_to 'test', '../projects/select_projects/' %>
 </span>
 
 <span class="field" style="margin-right: 50px" >
     <%= s.label :project %>
-    <%= s.grouped_collection_select :project, @client, :projects, :client_name, :project_name, :project_name, {}, {multiple: true}  %>
+    <%= s.grouped_collection_select :project, @client, :projects, :client_name, :id, :project_name, {}, {multiple: true}  %>
 </span>
 
 <span class="action">
