--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -13,7 +13,11 @@
 </span>
 </div>
 <%= link_to "Advanced Search", new_search_path, class: 'btn btn-secondary' %>
-
+<%# Time.zone.now.month %>
+<%# Project.find(1610).updated_at %><br><br>
+<%# if (Project.find(1610).updated_at.month == Time.zone.now.month) %>
+ Records are in the same month!!!!
+<%# end %>
 <table class="table">
   <thead>
     <tr>
@@ -21,10 +25,10 @@
       <th>Project status</th>
       <th>Project name</th>
       <th>Completion date</th>
-      <th>Completion month</th>
       <th>Budget revenue</th>
       <th>Budget margin</th>
       <th>Budget margin %</th>
+      <th>Updated At</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -36,10 +40,10 @@
         <td><%= project.project_status %></td>
         <td><%= project.project_name %></td>
         <td><%= project.completion_date %></td>
-        <td><%= project.completion_month %></td>
         <td><%= project.budget_revenue %></td>
         <td><%= project.budget_margin %></td>
         <td><%= project.budget_margin_pct %>%</td>
+        <td><%= project.created_at.strftime('%d %b %Y') %></td>
         <td><%= link_to 'Show', project %></td>
         <td><%= link_to 'Edit', edit_project_path(project) %></td>
         <td><%= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' } %></td>
