--- a/app/views/searches/show.html.erb
+++ b/app/views/searches/show.html.erb
@@ -15,6 +15,7 @@
       <th>Budget revenue</th>
       <th>Budget margin</th>
       <th>Budget margin %</th>
+      <th>Date Updated</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -30,6 +31,7 @@
         <td><%= project.budget_revenue %></td>
         <td><%= project.budget_margin %></td>
         <td><%= project.budget_margin_pct %></td>
+        <td><%= project.update_at %></td>
         <td><%= link_to 'Show', project %></td>
         <td><%= link_to 'Edit', edit_project_path(project) %></td>
         <td><%= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' } %></td>
