about to do a bundle update

--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -59,7 +59,7 @@
       </li>
     <% end %></ul>
     <hr>  
-    <%= f.submit "Update", class: 'btn btn-default' %>
+    <%= f.submit "Update", class: 'btn btn-default' %> | <button type="button" id="check_all" class="btn btn-primary">Check All</button>
   <% end %>
 <% end %>  
 
