--- a/app/views/layouts/_navdev.html.erb
+++ b/app/views/layouts/_navdev.html.erb
@@ -1,21 +1,30 @@
 <!-- Static navbar -->
-      <nav class="navbar navbar-inverse">
+      <nav class="navbar navbar-default">
         <div class="container-fluid">
           <div class="navbar-header">
-            <a class="navbar-brand" href="/">
-            <%= image_tag 'Project-logo-W.svg', width: '95px', style: 'margin-top: -8px;' %></a>
+            <a class="navbar-brand" href="/">Alpha – PWWDashboard</a>
           </div>
           <div id="navbar" class="">
             <ul class="nav navbar-nav">
-              <li><%= link_to 'Admin', admin_path, class: 'nav-link' %></li>
-              <li><%= link_to 'Manage users', profile_path(current_user), class: 'nav-link' %></li>
-              <li><%= link_to 'Sold Position', new_search_path, class: 'nav-link' %></li>
+              <li class=""><a href="/">home</a></li>
+              <li><%= link_to 'help', helps_path, class: 'nav-link' %></li>
+              <li><%= link_to 'manage users', manage_users_path, class: 'nav-link' %></li>
+              <li><%= link_to 'projects', projects_path, class: 'nav-link' %></li>
+              <li><%= link_to 'clients', clients_path, class: 'nav-link' %></li>
+              <li>
+                <div class="btn-group" role="group" aria-label="switch user roles" style="padding-top:8px;">
+                    <a href="../make_super_admin/<%= current_user.id %>" class="btn <%= 'btn-primary' if current_user.has_role? :super_admin %>">Super Admin</a>
+                    <a href="../make_admin/<%= current_user.id %>" class="btn <%= 'btn-primary' if current_user.has_role? :admin %>">Admin</a>
+                    <a href="../remove_roles/<%= current_user.id %>" class="btn <%= 'btn-primary' unless (current_user.has_role? :admin) || (current_user.has_role? :super_admin) %>">User</a>
+                </div>
+              </li>
             </ul>
             
             
             <ul class="nav navbar-nav navbar-right">
             <!-- SUPER ADMIN TOOLS PANEL -->
                 <% if current_user.has_role? :super_admin %>
+                <li style="margin-top: 15px;"><%= current_user.email %></li>
                     <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Super Admin <span class="caret"></span></a>
                 <ul class="dropdown-menu">
