--- a/app/views/pages/admin.html.erb
+++ b/app/views/pages/admin.html.erb
@@ -1,7 +1,16 @@
-<h1>Pages#admin</h1>
-<p>Find me in app/views/pages/admin.html.erb</p>
+<h1>Admin Panel</h1>
+<p>Welcome to the admin panel. This will be expanded upon to be much more comprehensive, however, below you will find some useful optoins including; the ability to assign yourself to more clients, remove yourself from clients and import a new CSV file</p>
 
-<%= simple_form_for(:user, :url => user_invitation_path) do |f| %>
+<h3>Manage your clients</h3>
+<%= link_to 'Update clients >', profile_path(current_user), class: 'btn btn-default' %>
+
+<h3>Upload New Data</h3>
+<p>Accepts .csv files only.</p>
+<%= form_tag('/projects/import/', multipart: true) do %>
+  <%= file_field_tag :file %> <%= submit_tag 'Upload', class: 'btn btn-default', style: 'margin-top: 15px;' %>
+<% end %>
+
+<% simple_form_for(:user, :url => user_invitation_path) do |f| %>
     <%= f.error_notification %>
     
 <div class="form-inputs">
