--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -24,7 +24,7 @@
       <th>Budget revenue</th>
       <th>Budget margin</th>
       <th>Budget margin %</th>
-      <th>Updated At</th>
+      <th>Created At</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -51,8 +51,7 @@
 <br>
 <h3>Upload Database</h3>
 <%= form_tag('/projects/import/', multipart: true) do %>
-  <%= file_field_tag :file %>
-  <%= submit_tag 'Upload', class: 'btn btn-default'%>
+  <%= file_field_tag :file %> <%= submit_tag 'Upload', class: 'btn btn-default', style: 'margin-top: 15px;' %>
 <% end %>
 <br><br>
 <div class="btn-group">
