--- a/app/views/searches/new.html.erb
+++ b/app/views/searches/new.html.erb
@@ -2,9 +2,7 @@
 
 <h1>Results</h1>
 
-
-<%= column_chart Project.pluck(:created_at, :budget_margin), colors: ["red"], ytitle: "Budget Margin", xtitle: "Budget Revenue" %>
-<%= pie_chart Project.group(:client).order(:client).limit(6).sum(:budget_revenue), colors: ["red","blue","orange"] %>
+<%# pie_chart Project.group(:client).order(:client).sum(:budget_revenue), colors: ["red","blue","orange"] %>
 
 <table class="table">
   <thead>
@@ -20,9 +18,8 @@
       <th colspan="3"></th>
     </tr>
   </thead>
-
   <tbody> 
-    <% @project.each do |project| %>
+    <% Project.all.each do |project| %>
       <tr>
         <td><%= project.client %></td>
         <td><%= project.project_status %></td>
