chart now working, added a user nav and a dev nav for alpha testing

--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -8,7 +8,7 @@
           <div id="navbar" class="">
             <ul class="nav navbar-nav">
               <li><%= link_to 'Admin', admin_path, class: 'nav-link' %></li>
-              <li><%= link_to 'Manage users', profile_path(current_user), class: 'nav-link' %></li>
+              <li><%= link_to 'Manage users', profiles_path, class: 'nav-link' %></li>
               <li><%= link_to 'Sold Position', new_search_path, class: 'nav-link' %></li>
             </ul>
             
