--- a/app/views/searches/show.html.erb
+++ b/app/views/searches/show.html.erb
@@ -7,7 +7,7 @@
   {name: project.project_name, data: project.class.group(:created_month).sum(:budget_margin)}
 } %>
          <% current_data.each do |data| %>
-          <%= data[1] %>, 
+          <%= data[1] %>, <br>
          <% end %>
 
 <div id="test" ></div>
