--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -9,7 +9,7 @@
             <ul class="nav navbar-nav">
               <li><%= link_to 'Admin', admin_path, class: 'nav-link' %></li>
               <li><%= link_to 'Manage my clients', profile_path(current_user.profile), class: 'nav-link' %></li>
-              <li><%= link_to 'Sold Position', new_search_path, class: 'nav-link' %></li>
+              <li><%= link_to 'Sold Position', '../searches/15', class: 'nav-link' %></li>
             </ul>  
             
             <ul class="nav navbar-nav navbar-right">
