updated the manage users page, can now delete users and make them an admin. Added a uncheck/check all button to the assign client section. Attempting to get devise-invitable working

--- a/app/views/clients/_form.html.erb
+++ b/app/views/clients/_form.html.erb
@@ -5,7 +5,7 @@
     <%= f.input :client_name %>
     <%= f.input :country, priority: ['Australia', 'United States', 'United Kingdom'] %>
     <%= f.input :region %>
-    <%= f.input :company, collection: ['ARGONAUT','G7','George P. Johnson','Junior','Motive','Partners + Napier','Pitch','Raumtechnik','School','Shoptology','Spinifex Group'], selected: ['George P. Johnson'] %>
+    <%= f.input :company, collection: ['ARGONAUT','G7','George P. Johnson','Junior', 'Juxt','Motive','Partners + Napier','Pitch','Raumtechnik','School','Shoptology','Spinifex Group'], selected: ['George P. Johnson'] %>
   </div>
 
   <div class="form-actions">
