--- a/app/views/searches/show.html.erb
+++ b/app/views/searches/show.html.erb
@@ -15,12 +15,11 @@ var chart = c3.generate({
     data: {
       x: 'x',
       columns: [
-        ['x', '2016-01-01', '2016-02-02', '2016-03-03', '2016-04-04', '2016-05-05', '2016-06-06', '2016-07-07', '2016-08-08', '2016-09-09', '2016-10-10', '2016-11-11', '2016-12-12'],
-        // ['x', 
-        // <% Search.past_sample_data.each do |past| %>
-        //   '<%= past[0] %>',  
-        // <% end %>
-        // ],
+        ['x', 
+        <% Search.past_sample_data.each do |past| %>
+          '<%= past[0] %>',  
+        <% end %>
+        ],
         ['2016 Actual', 
         <% current_data.each do |data| %>
           <%= data[1] %>, 
