--- a/app/views/searches/_form.html.erb
+++ b/app/views/searches/_form.html.erb
@@ -1,17 +1,30 @@
 <%= form_for(@search) do |s| %>
+<div class="alert alert-info col-lg-12">
+<div class="col-lg-12">
+    <span class="field" style="margin-right: 50px" >
+        <%= s.label :client, collection: @client %>
+        <%= s.collection_select :client, current_user.clients, :id, :client_name, {}, {multiple: true, include_blank: false} %>
+    </span>
 
-<span class="field" style="margin-right: 50px" >
-    <%= s.label :client, collection: @client %>
-    <%= s.collection_select :client, current_user.clients, :id, :client_name, {}, {multiple: true, include_blank: false} %>
-</span>
+    <span class="field" style="margin-right: 50px" >
+        <%= s.label :project %>
+        <%= s.grouped_collection_select :project, current_user.clients, :projects, :client_name, :id, :project_name_with_date, {}, {multiple: true, include_blank: false}  %>
+    </span>
+</div>
+<div class="col-lg-12" style="padding-top: 10px;">
+    <span class="field" style="margin-right: 50px">
+        <%= s.label :from_date %>
+        <%= s.text_field :from_date, input_html: { autocomplete: 'off' } %>
+    </span>
 
-<span class="field" style="margin-right: 50px" >
-    <%= s.label :project %>
-    <%= s.grouped_collection_select :project, current_user.clients, :projects, :client_name, :id, :project_name_with_date, {}, {multiple: true, include_blank: false}  %>
-</span>
-
-<span class="action">
-    <%= s.submit "search", class: "btn btn-primary" %>
-</span>
-
+    <span class="field" style="margin-right: 50px">
+        <%= s.label :to_date %>
+        <%= s.text_field :to_date, input_html: { autocomplete: 'off' } %>
+    </span>
+    
+    <span class="action">
+        <%= s.submit "search", class: "btn btn-primary" %>
+    </span>
+</div>
+</div>
 <% end %>
